--- a/AppStoreRanking/AppStoreRanking-Info.plist
+++ b/AppStoreRanking/AppStoreRanking-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.smartaisles.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.kevingibbon.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
